# stack_allocator

./: .gitignore  CMakeLists.txt  README.md  main.cpp  stack.cpp  stack.h  test.cpp  test.h
include/stackallocator/: allocationArea.h  stack.h  stackAllocator.h  stackAllocator.ipp  stackChain.h
include/test/: testConstants.h  testGeneration.h  testStackTime.h  testTime.h
include/xorlist/: const_iterator.h  const_iterator.ipp  iterator.h  iterator.ipp  node.h  xorlist.h  xorlist.ipp
src/: CMakeLists.txt  allocationArea.cc  stackChain.cc
test/: CMakeLists.txt  test_Stack.cc  test_Xorlist.cc
